--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,69 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ideas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Sistema\\Libs\\AbsoluteLayout.jar
+file.reference.AppletPrintJRV.jar=C:\\Sistema\\Libs\\AppletPrintJRV.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Sistema\\Libs\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Sistema\\Libs\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Sistema\\Libs\\commons-digester-2.1.jar
+file.reference.commons-fileupload-1.2.1.jar=C:\\Sistema\\Libs\\commons-fileupload-1.2.1.jar
+file.reference.commons-io-1.4.jar=C:\\Sistema\\Libs\\commons-io-1.4.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Sistema\\Libs\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Sistema\\Libs\\commons-logging-1.1.1.jar
+file.reference.flexjson.jar=C:\\Sistema\\Libs\\flexjson.jar
+file.reference.GiovynetDriver.jar=C:\\Sistema\\Libs\\GiovynetDriver.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Sistema\\Libs\\groovy-all-2.0.1.jar
+file.reference.hamcrest-core-1.3.jar=C:\\Sistema\\Libs\\hamcrest-core-1.3.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Sistema\\Libs\\iText-2.1.7.js2.jar
+file.reference.jasperreports-6.1.0.jar=C:\\Sistema\\Libs\\jasperreports-6.1.0.jar
+file.reference.jasperreports-fonts-6.1.0.jar=C:\\Sistema\\Libs\\jasperreports-fonts-6.1.0.jar
+file.reference.jasperreports-functions-6.1.0.jar=C:\\Sistema\\Libs\\jasperreports-functions-6.1.0.jar
+file.reference.jasperreports-javaflow-6.1.0.jar=C:\\Sistema\\Libs\\jasperreports-javaflow-6.1.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Sistema\\Libs\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=C:\\Sistema\\Libs\\jcommon-1.0.23.jar
+file.reference.joda-time-2.4.jar=C:\\Sistema\\Libs\\joda-time-2.4.jar
+file.reference.jstl.jar=C:\\Sistema\\Libs\\jstl.jar
+file.reference.junit-4.11.jar=C:\\Sistema\\Libs\\junit-4.11.jar
+file.reference.mail.jar=C:\\Sistema\\Libs\\mail.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=C:\\Sistema\\Libs\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=C:\\Sistema\\Libs\\orsonpdf-1.6-eval.jar
+file.reference.PDFRenderer-0.9.1no.jar=C:\\Sistema\\Libs\\PDFRenderer-0.9.1no.jar
+file.reference.postgresql-9.2-1003.jdbc3.jar=C:\\Sistema\\Libs\\postgresql-9.2-1003.jdbc3.jar
+file.reference.servlet.jar=C:\\Sistema\\Libs\\servlet.jar
+file.reference.standard.jar=C:\\Sistema\\Libs\\standard.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.AppletPrintJRV.jar}:\
+    ${file.reference.GiovynetDriver.jar}:\
+    ${file.reference.PDFRenderer-0.9.1no.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-fileupload-1.2.1.jar}:\
+    ${file.reference.commons-io-1.4.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.flexjson.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-6.1.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.1.0.jar}:\
+    ${file.reference.jasperreports-functions-6.1.0.jar}:\
+    ${file.reference.jasperreports-javaflow-6.1.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.joda-time-2.4.jar}:\
+    ${file.reference.jstl.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.postgresql-9.2-1003.jdbc3.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.standard.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +114,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ideas.Logueo
+main.class=FORMS.Logueo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
